# rust-solana-launchpad-task

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md
backend/: .env.example  Cargo.toml
backend/.cargo/: audit.toml
backend/src/: main.rs
docs/: .active_ticket  ML-1-summary.md  ML-2-summary.md  ML-3-summary.md  ML-4-summary.md  ML-5-summary.md  idea.md  tasklist.md  vision.md  workflow.md
docs/phase/: phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md
docs/plan/: ML-1.md  ML-2.md  ML-3.md  ML-4.md  ML-5.md
docs/prd/: ML-1.prd.md  ML-2.prd.md  ML-3.prd.md  ML-4.prd.md  ML-5.prd.md
docs/reports/qa/: ML-2.md  ML-3.md  ML-4.md
docs/research/: ML-1.md  ML-2.md  ML-3.md  ML-4.md  ML-5.md
docs/tasklist/: ML-1.md  ML-2.md  ML-3.md  ML-4.md  ML-5.md
frontend/: package-lock.json  package.json
frontend/app/: config.ts
frontend/app/components/: TerminalApp.tsx
program/: .gitignore  Anchor.toml  package.json
program/migrations/: deploy.ts
program/programs/sol_usd_oracle/src/: lib.rs
program/programs/token_minter/src/: lib.rs
program/scripts/: get-oracle-pda.js  init-local.js
program/tests/: minter.litesvm.ts  oracle.litesvm.ts
reports/qa/: ML-1.md  ML-5.md
